--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site"
     />
     <title>Flow Algorithms</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
